A couple of views renamed Adding potential to delete single tasks scheduled in hangfire

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -9,7 +9,7 @@
             <li id="newTask">@Html.ActionLink("Add Task", "NewTask", "Home")</li>
             <li id="assignTask">@Html.ActionLink("Assign Single Task", "AssignTask", "Home")</li>
             <li id="scheduleTask">@Html.ActionLink("Schedule Recurring Tasks", "SchedTask", "Home")</li>
-            <li id="randTask">@Html.ActionLink("Group recurring Tasks", "RandTask", "Home")</li>
+            <li id="randTask">@Html.ActionLink("Group recurring Tasks", "GroupScheduleTask", "Home")</li>
         </ul>
     </div>
     <div>
@@ -18,7 +18,7 @@
             <li id="viewTasks">@Html.ActionLink("View Tasks", "ViewTasks", "Home")</li>
             <li id="viewHistory">@Html.ActionLink("View History", "HistoryDashboard", "Home")</li>
             <li id="viewSched">@Html.ActionLink("View Scheduled Tasks", "ViewSched", "Home")</li>
-            <li id="viewRand">@Html.ActionLink("View recurring Tasks", "ViewRandTask", "Home")</li>
+            <li id="viewRand">@Html.ActionLink("View recurring Tasks", "ViewGroupScheduleTasks", "Home")</li>
         </ul>
     </div>
 </div>
