Added send now and delete functionality to upcoming messages

--- a/Views/Home/ViewHistory.cshtml
+++ b/Views/Home/ViewHistory.cshtml
@@ -88,7 +88,8 @@
                         }
                     </td>
                 }
-                <td>@Html.ActionLink("Resend task", "ResendTask", new { id = item.Id })</td>
+                <td>@Html.ActionLink("Send task now", "ResendTask", new { id = item.Id })<br/>
+                 @if (item.SendTime > DateTime.Now) { @Html.ActionLink("Delete task", "DeleteUpcomingMessage", new { id = item.Id }); }</td>
             </tr>
         }
     </tbody>
