--- a/Views/Home/GroupScheduleTask.cshtml
+++ b/Views/Home/GroupScheduleTask.cshtml
@@ -30,11 +30,11 @@
             <div class="form-group" id="time">
                 <label asp-for="Time" class="control-label"></label>
                 <input asp-for="Time" type="time" class="form-control" />
-                <span asp-validation-for="Time" class="text-danger"></span>
-            </div>
-            <div class="form-group>
                 <label asp-for="TimeOverride" class="control-label"></label>
                 <input asp-for="TimeOverride" type="checkbox" class="form-control" />
+            </div>
+            <div class="form-group">
+                
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
