--- a/Views/Home/ViewGroupScheduleTasks.cshtml
+++ b/Views/Home/ViewGroupScheduleTasks.cshtml
@@ -85,9 +85,8 @@
                 @Html.DisplayFor(modelItem => item.TimeOverride)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("View upcoming", "ViewUpcomingTasks", new { id=item.Id }) |
+                @Html.ActionLink("Delete", "DeleteGroupSchedule", new { id=item.Id })
             </td>
         </tr>
 }
