--- a/Views/Home/ViewGroupScheduleTasks.cshtml
+++ b/Views/Home/ViewGroupScheduleTasks.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.GroupTaskRun)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Time)
@@ -31,16 +31,10 @@
                 @Html.DisplayNameFor(model => model.DayFrequency)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.StartDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EndDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CancelToken)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TimeOverride)
@@ -70,9 +64,6 @@
                 @Html.DisplayFor(modelItem => item.DayFrequency)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
@@ -80,9 +71,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CancelToken)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimeOverride)
             </td>
             <td>
                 @Html.ActionLink("View upcoming", "ViewUpcomingTasks", new { id=item.Id }) |
