--- a/Views/Home/ViewGroupScheduleTasks.cshtml
+++ b/Views/Home/ViewGroupScheduleTasks.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<HeyDo.Models.GroupTaskSchedule>
 
 @{
-    ViewData["Title"] = "ViewRandTask";
+    ViewData["Title"] = "Group Scheduled Tasks";
 }
 
-<h1>ViewRandTask</h1>
+<h1>Group Scheduled Tasks</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="GroupScheduleTask">Create New Group Schedule</a>
 </p>
 <table class="table">
     <thead>
@@ -19,22 +19,13 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Time)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DayOfMonth)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Frequency)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DayFrequency)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.StartDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Time)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TimeOverride)
@@ -49,19 +40,7 @@
                 @Html.DisplayFor(modelItem => item.GroupTaskRun)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DayOfMonth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Frequency)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DayFrequency)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
@@ -70,11 +49,14 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CancelToken)
+                @Html.DisplayFor(modelItem => item.Time)
             </td>
             <td>
-                @Html.ActionLink("View upcoming", "ViewUpcomingTasks", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "DeleteGroupSchedule", new { id=item.Id })
+                @Html.DisplayFor(modelItem => item.TimeOverride)
+            </td>
+            <td>
+                @Html.ActionLink("View upcoming tasks", "ViewUpcomingTasks", new { id=item.Id }) |
+                @Html.ActionLink("Delete this group", "DeleteGroupSchedule", new { id=item.Id })
             </td>
         </tr>
 }
