--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -9,7 +9,8 @@
             <li id="newTask">@Html.ActionLink("Add Task", "NewTask", "Home")</li>
             <li id="assignTask">@Html.ActionLink("Assign Single Task", "AssignTask", "Home")</li>
             <li id="scheduleTask">@Html.ActionLink("Schedule Recurring Tasks", "SchedTask", "Home")</li>
-            <li id="randTask">@Html.ActionLink("Group recurring Tasks", "GroupScheduleTask", "Home")</li>
+            @*This current functionality is super buggy so omitting it*@
+            @*<li id="randTask">@Html.ActionLink("Group recurring Tasks", "GroupScheduleTask", "Home")</li>*@
         </ul>
     </div>
     <div>
@@ -19,7 +20,8 @@
             <li id="viewHistory">@Html.ActionLink("View History", "HistoryDashboard", "Home")</li>
             <li id="viewUpcoming">@Html.ActionLink("View Upcoming Tasks", "ViewUpcomingTasks", "Home")</li>
             <li id="viewSched">@Html.ActionLink("View Scheduled Tasks", "ViewSched", "Home")</li>
-            <li id="viewRand">@Html.ActionLink("View recurring Tasks", "ViewGroupScheduleTasks", "Home")</li>
+            @*Commenting out this view as the functionality is currently disabled*@
+            @*<li id="viewRand">@Html.ActionLink("View recurring Tasks", "ViewGroupScheduleTasks", "Home")</li>*@
         </ul>
     </div>
 </div>
