--- a/Views/Home/AssignTask.cshtml
+++ b/Views/Home/AssignTask.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group" id="time">
                 <label asp-for="UserTask.SendTime" class="control-label"></label>
-                <select asp-for="UserTask.SendTime" class="form-control" asp-items="Model.Times"></select>
+                <input asp-for="UserTask.SendTime" class="form-control" >
                 <span asp-validation-for="UserTask.SendTime" class="text-danger"></span>
             </div>
             <div class="form-group">
